@@ -1,0 +1,9 @@
+package Player;
+use strict;
+our @ISA = qw(Actor);
+
+sub new {
+	return bless({type => 'Player'});
+}
+
+1;
